k8s/base/api-gateway/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-gateway
spec:
    replicas: 1
    selector:
        matchLabels:
            app: api-gateway
    template:
        metadata:
            labels:
                app: api-gateway
        spec:
            containers:
                - name: api-gateway
                  image: api-gateway:latest
                  ports:
                      - containerPort: 8080
                  livenessProbe:
                      httpGet:
                          path: /actuator/health/liveness
                          port: 8080
                      initialDelaySeconds: 45
                      periodSeconds: 15
                      failureThreshold: 3
                  readinessProbe:
                      httpGet:
                          path: /actuator/health/readiness
                          port: 8080
                      initialDelaySeconds: 20
                      periodSeconds: 10
                      failureThreshold: 3
                  resources:
                      requests:
                          cpu: 64m
                          memory: 128Mi
                      limits:
                          cpu: 250m
                          memory: 256Mi
