k8s/base/api-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: api-gateway
spec:
    selector:
        app: api-gateway
    ports:
        - port: 8080
          targetPort: 8080
    type: ClusterIP
